<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, SpinninghalfappActivity!</string>
    <string name="app_name">Spinning Half</string>
    <string name="gigguide">Gig Guide</string>
    <string name="rehearsals">Rehearsals</string>
    <string name="artists">Artists</string>
    <string name="venues">Venues</string>
    <string name="aboutUs">About Us</string>
    <string name="contact">Contact</string>
    <string name="headOffice">Head Office</string>
    <string name="headOfficeStreetAddress">Suite 3/2 Fenwick St South</string>
    <string name="headOfficeCityRegionState">Geelong, VIC 3220</string>
    <string name="headOfficePhoneNumber">(03) 5222 1186</string>
    <string name="rehearsalsStreetAddress">313 Bellarine St</string>
    <string name="rehearsalsCityRegionState">South Geelong, VIC 3220</string>
    <string name="headOfficeEmail">info@spinninghalf.com.au</string>
    <string name="rehearsalsEmail">bookings@spinninghalf.com.au</string>
    <string name="rehearsalsPhoneNumber">(03) 5222 1186</string>
    <string name="spinningHalfFacebook">Facebook</string>
    <string name="spinningHalfTwitter">Twitter</string>
    <string name="spinningHalfYoutube">Youtube</string>
    <string name="loremIpsum">My shizz ipsizzle dolor pimpin amet, consectetuer fizzle elizzle. Nullam go to hizzle velit, its fo rizzle volutpat, suscipizzle quizzle, gravida vizzle, mammasay mammasa mamma oo sa. Pellentesque things tortor. Sed eros. Ass izzle dolizzle dapibizzle turpis tempizzle doggy. Maurizzle pellentesque nibh izzle shizzle my nizzle crocodizzle. Check out this in tortizzle. We gonna chung eleifend my shizz nisi. In away fo shizzle platea dictumst. Ass dapibizzle. My shizz cool urna, pretizzle fizzle, mattizzle ac, eleifend vitae, nunc. Shizzlin dizzle suscipizzle. Integizzle sempizzle velit sizzle purizzle.
Sed ullamcorper. Aliquizzle sagittizzle massa sure maurizzle. Vestibulizzle ante ipsizzle get down get down black faucibus thats the shizzle bizzle stuff fo shizzle black owned Curae; Aenizzle fo shizzle. Pellentesque thats the shizzle morbi tristique away izzle ass fo shizzle my nizzle shiznit yo mamma izzle owned egestizzle. Donec tempor hendrerit fo shizzle mah nizzle fo rizzle, mah home g-dizzle. Aliquizzle erizzle shizznit. Vivamizzle yo mamma enim, scelerisque ac, dignissim a, fringilla da bomb, arcu. Nulla black. Tellivizzle fermentum, est at pharetra mofo, magna mah nizzle ultricizzle neque, nizzle urna dolizzle da bomb nibh. Vivamizzle tellus neque, fo shizzle ut, ornare izzle, yo mamma nizzle, leo. Praesent purus sizzle, bibendizzle sizzle crunk, sheezy funky fresh, dignissizzle malesuada, arcu. Aenizzle eget ipsum izzle get down get down ullamcorpizzle tincidunt. Shiz for sure. Shizzle my nizzle crocodizzle dawg urna, pizzle izzle, scelerisque venenatizzle, owned bizzle, fo shizzle mah nizzle fo rizzle, mah home gdizzle. Etiam gravida.
Vestibulizzle things ipsizzle primizzle black we gonna chung fo shizzle my nizzle izzle et ultrices mammasay mammasa mamma oo sa funky fresh Curae; Bow wow wow vitae nulla quizzle fizzle pot check out this. Phasellizzle its fo rizzle fizzle. Praesent volutpizzle shizznit velizzle. Boofron dizzle dui, adipiscing gizzle, gravida tellivizzle, interdizzle vitae, ante. Etiam gangsta bibendum mauris. Sed izzle pizzle et shit break it down laorizzle. Nizzle fo shizzle mah nizzle fo rizzle, mah home g-dizzle augue. Vivamizzle shiznit. Praesent eu ghetto quizzle lacizzle posuere adipiscing. Ma nizzle own  tellizzle uhuh yih! felizzle gizzle mollizzle. Ghetto dang. Ts the shizzle scelerisque. Quisque magna eros, dignissizzle crackalackin, you son of a bizzle ac, imperdiet im in the shizzle, orci. Shut the shizzle up commodo sodales . Fo shizzle sollicitudizzle gizzle sem. Phasellus mi , convallizzle izzle, bizzle vizzle, ultricizzle shiz, nibh. Fusce bling bling pizzle, nizzle mofo, sollicitudizzle eu, fo shizzle mah nizzle fo rizzle, mah home g-dizzle shiz, lectizzle. Break yo neck, yall maurizzle da bomb, varius molestie, adipiscing fo shizzle mah nizzle fo rizzle, mah home g-dizzle, blandizzle check out this shizznit, enim.
Integizzle fo metizzle izzle arcu pot aliquizzle. Dizzle posuere. Sizzle black ante. Dizzle shiz pede, hendrerizzle daahng dawg, condimentum izzle, pot quis, massa. Vestibulizzle feugiat. Ut sheezy ultricizzle leo. Quisque crazy, orci go to hizzle my shizz vulputate, enim ghetto shizznit gangster, izzle eleifend diam nulla nizzle funky fresh. Maecenizzle feugiat doggy velit. Pizzle shizznit maurizzle, nonummy izzle, boofron izzle, yo mamma varizzle, thats the shizzle. In mofo, ligula da bomb pretium tellivizzle, the bizzle nibh posuere tellivizzle, a black bow wow wow cool sizzle daahng dawg augue. Aliquam own yo nizzle odio fermentum gangsta. Quisque aliquizzle tempizzle stuff. Nizzle vehicula hendrerizzle maurizzle. Suspendisse shizzle my nizzle crocodizzle. Crizzle placerat leo a mi. Im in the shizzle pellentesque. In hizzle i saw beyonces tizzles and my pizzle went crizzle platea dictumst. Crizzle own yo fo nec yo mamma uhuh yih! eleifend. Phasellizzle bizzle shit, pulvinizzle bow wow wow, fringilla a, consectetuer nizzle, nisl. Gangster vizzle nibh ut neque tempizzle dizzle.
Nunc fo shizzle my nizzle arcu. Donizzle ante. We gonna chung placerizzle uhuh yih! at lectus. Morbi crazy tortor. Cras izzle tortor izzle you son of a bizzle consectetizzle condimentum. Lorem ipsum dolor stuff amizzle, consectetuer adipiscing elizzle. Funky fresh elit arcu, fo shizzle nizzle, mofo izzle, mollis izzle, thats the shizzle. Aliquam fo shizzle volutpizzle. Go to hizzle tempizzle posuere turpis. Dizzle sure. Cras odio doggy, pizzle izzle, volutpizzle rizzle, vehicula sizzle, stuff. Praesent thats the shizzle cool, congue nec, shiz dang, commodo fo shizzle my nizzle, orci.
Nunc commodo erat izzle . Nullizzle shiznit. Its fo rizzle viverra laorizzle dui. Check it out sizzle amet purus eu away volutpizzle gangsta. Suspendisse go to hizzle. Uhuh yih! ghetto fo shizzle mah nizzle fo rizzle, mah home g-dizzle shit purizzle tincidunt aliquizzle. Sed gravida tempor ante. In interdizzle you son of a bizzle izzle sem. I saw beyonces tizzles and my pizzle went crizzle fizzle. Nizzle crackalackin shit yo boom shackalack yo mamma viverra. facilisi. Go to hizzle quizzle ass a ma nizzle gangster check out this. Nullam you son of a bizzle dui ghetto velizzle. Crizzle semper im in the shizzle sed daahng dawg. Etizzle pretizzle purizzle nizzle dui. Maecenas rutrizzle rhoncus purus.
</string>
    <string name="spinningHalfRehearsals">Spinning Half Rehearsals</string>

</resources>